tests/fixtures/valid/slot_assign_bool.torel
unit fixtures.slot_assign_bool;

export proc main() -> Bool {
    slot flag: Bool = false;
    flag = true;
    return flag;
}
