tests/fixtures/invalid/operator_compare_bool.torel
unit fixtures.operator_compare_bool;

export proc main() -> Bool {
    true < false
}
